--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.4",
     "lucide-react": "^0.471.0",
-    "next": "14.2.16",
+    "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.15.0",
